# tflite_inference

./: CMakeLists.txt  README.md  inference.cpp  mnist.tflite
